# pyLocusZoom

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bioconda/: meta.yaml
docs/: ARCHITECTURE.md  CODEMAP.md  USER_GUIDE.md
examples/: eqtl_bokeh.html  finemapping_bokeh.html  generate_example_plots.py  generate_readme_plots.py  getting_started.ipynb  manhattan_bokeh.html  manhattan_qq_bokeh.html  manhattan_qq_stacked_bokeh.html  manhattan_stacked_bokeh.html  qq_bokeh.html  regional_recomb_bokeh.html
src/pylocuszoom/: __init__.py  _plotter_utils.py  colors.py  config.py  ensembl.py  eqtl.py  finemapping.py  forest.py  gene_track.py  labels.py  loaders.py  manhattan.py  manhattan_plotter.py  phewas.py  plotter.py  recombination.py  schemas.py  stats_plotter.py  utils.py  validation.py
src/pylocuszoom/backends/: __init__.py  base.py  bokeh_backend.py  matplotlib_backend.py  plotly_backend.py
src/snp_scope_plot/: __init__.py  gene_track.py  ld.py  logging.py  plotter.py  recombination.py  utils.py
tests/: test_backend_bugs.py  test_backends.py  test_colors.py  test_config.py  test_edge_cases.py  test_ensembl.py  test_ensembl_integration.py  test_finemapping.py  test_forest.py  test_gene_track.py  test_init.py  test_labels.py  test_ld.py  test_loaders.py  test_logging.py  test_notebook_backends.py  test_phewas.py  test_plotter.py  test_plotter_manhattan_qq.py  test_recombination.py  test_utils.py  test_validation.py
