[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snp-scope-plot"
version = "0.1.0"
description = "Regional association plots for GWAS results with LD coloring, gene tracks, and recombination rate overlays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Michael Denyer" },
]
keywords = ["gwas", "genetics", "visualization", "locus-zoom", "regional-plot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "loguru>=0.7.0",
    "pyliftover>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
labels = [
    "adjustText>=0.8",
]
all = [
    "adjustText>=0.8",
]

[project.urls]
Homepage = "https://github.com/michael-denyer/snp-scope-plot"
Documentation = "https://github.com/michael-denyer/snp-scope-plot#readme"
Repository = "https://github.com/michael-denyer/snp-scope-plot"

[tool.hatch.build.targets.wheel]
packages = ["src/snp_scope_plot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
