[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylocuszoom"
version = "0.5.0"
description = "Publication-ready regional association plots with LD coloring, gene tracks, and recombination overlays"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Michael Denyer" },
]
keywords = ["gwas", "genetics", "visualization", "locus-zoom", "regional-plot", "locuszoom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "loguru>=0.7.0",
    "pyliftover>=0.4",
    "plotly>=5.15.0",  # 5.15+ required for multiple legends (legend2)
    "bokeh>=3.8.2",
    "kaleido>=0.2.0",
    "adjustText>=0.8",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
spark = [
    "pyspark>=3.0.0",
]
all = [
    "pyspark>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/michael-denyer/pylocuszoom"
Documentation = "https://github.com/michael-denyer/pylocuszoom#readme"
Repository = "https://github.com/michael-denyer/pylocuszoom"

[tool.hatch.build.targets.wheel]
packages = ["src/pylocuszoom"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
]
